# Boole

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  deny.toml  install.sh
crates/boole-cli/: Cargo.toml
crates/boole-cli/src/: cli_envelope.rs  lib.rs  main.rs
crates/boole-cli/tests/: account_balance_cli.rs  bounty_announce_cli.rs  bounty_cli.rs  bounty_status_cli.rs  bounty_submit_cli.rs  cli_envelope.rs  faucet_cli.rs  keys.rs  keys_sign.rs  keys_verify.rs  mine_bounty_cli.rs  mine_init_cli.rs  mine_start_cli.rs  node_block.rs  replay_cli.rs  reputation_cli.rs  session_key.rs  signer.rs  state_verify_cli.rs  state_verify_deep_blocks.rs  state_verify_deep_cli.rs  state_verify_deep_lean_cli.rs  state_verify_recovery.rs  wallet_cli.rs  work_cli.rs
crates/boole-core/: Cargo.toml
crates/boole-core/src/: accounting.rs  admission.rs  admission_types.rs  agent_events.rs  block.rs  block_builder.rs  bounty_ledger.rs  bounty_promotion.rs  bounty_proof_verifier.rs  bounty_registry.rs  bounty_side_pool.rs  canonical_json.rs  config.rs  difficulty.rs  family_manifest.rs  family_manifest_registry.rs  fork_choice.rs  genesis.rs  hash.rs  lean_bound_canon.rs  lib.rs  paths.rs  rate_limiter.rs  receipt.rs  rejection_log.rs  replay.rs  replay_evidence.rs  rules.rs  session_policy.rs  share_authorization.rs  share_pool.rs  signed_envelope.rs  submission_pow.rs  submit_receipt_audit.rs  telemetry.rs  useful_product.rs  useful_task_registry.rs  useful_work.rs  validator.rs  vault.rs  (+1 more)
crates/boole-core/tests/: admission_fixtures.rs  biguint_score.rs  block_builder_fixtures.rs  block_builder_liveness.rs  block_builder_promoted.rs  block_hash_fixtures.rs  block_hash_v2.rs  block_hash_v3.rs  block_ts_rules.rs  bounty_announce_schema.rs  bounty_event_ledger.rs  bounty_ledger_fixtures.rs  bounty_list.rs  bounty_loader.rs  bounty_promotion.rs  bounty_registry_fixtures.rs  bounty_side_pool_fixtures.rs  canonical_json.rs  canonical_selection_replay.rs  config_fixtures.rs  consensus_proof_dedup.rs  cumulative_work.rs  difficulty_retarget.rs  family_manifest_registry.rs  family_manifest_signature.rs  fork_choice.rs  genesis_commitment.rs  genesis_replay.rs  hash_pow_fixtures.rs  lean_bound_canon.rs  manifest_fixtures.rs  rate_limiter_fixtures.rs  rate_limiter_seen_tickets_cap.rs  receipt.rs  rejection_log_fixtures.rs  replay_evidence_required.rs  replay_fixtures.rs  replay_resource_limits.rs  replay_retarget.rs  reward_authorization_replay.rs  (+19 more)
crates/boole-lean-runner/: Cargo.toml
crates/boole-lean-runner/src/: lib.rs
crates/boole-lean-runner/tests/: budget_override_boundary.rs  budget_verdict.rs  canonical_checker.rs  effective_toolchain.rs  real_checker.rs  soundness_boundary.rs  verdict_corpus.rs
crates/boole-mcp/: Cargo.toml  build.rs
crates/boole-mcp/src/: lib.rs  main.rs
crates/boole-mcp/tests/: dispatch_tool.rs  e2e_transcript_fixture.rs  inprocess_chain_head.rs  inprocess_mining_deps.rs  inprocess_mining_zero_cycle.rs  inprocess_submitter.rs  install_targets.rs  jsonrpc_dispatch.rs  mcp_framing.rs  mining_tool_surface.rs  real_mining_round_trip.rs  runtime_smoke_fixture.rs  scaffold.rs  stdio_transport.rs  tool_surface.rs  version.rs
crates/boole-miner/: Cargo.toml
crates/boole-miner/src/: bounty_client.rs  chain_head.rs  cli.rs  family_v031.rs  family_v1_lenbound.rs  http_client.rs  http_runner.rs  lib.rs  llm_driver.rs  local_verify.rs  mining_loop.rs  proof_intake.rs  proof_package.rs  proof_signer.rs  state.rs  submit_client.rs  target_emitter.rs
crates/boole-miner/src/canonicalizer/: lean_bound.rs  mod.rs  (+1 more)
crates/boole-miner/tests/: agent_signer.rs  bounty_client.rs  chain_head.rs  debug_redaction.rs  http_client.rs  lean_canonicalizer.rs  legacy_state_migration.rs  live_canon_provenance.rs  llm_driver.rs  local_verify.rs  mining_loop.rs  nonce_source.rs  paid_api_gate.rs  paid_llm_gate.rs  proof_intake.rs  proof_package.rs  prover_sk_resolution.rs  share_grinder.rs  state.rs  submit_client.rs  submit_pow_grinder.rs  target_emitter.rs  ticket_grinder.rs
crates/boole-node/: Cargo.toml
crates/boole-node/src/: block_store.rs  block_verifier.rs  bounty_catalog_store.rs  bounty_event_store.rs  checker_pin.rs  checkpoint.rs  deep_verify.rs  durability.rs  family_manifest_store.rs  http_error.rs  lean_bounty_verifier.rs  lib.rs  local_node.rs  main.rs  nonce_ledger.rs  p2p_egress.rs  p2p_ingress.rs  proof_bridge.rs  proof_dedup_ledger.rs  receipt_store.rs  reputation_store.rs  reward_store.rs  runtime.rs  runtime_smoke.rs  session_store.rs  signed_nonce_ledger.rs  state_dir.rs  useful_product_verifier.rs  useful_work_store.rs  work_manifest_store.rs
crates/boole-node/tests/: account_balance_route.rs  admission_share_reverify.rs  agent_passport_events.rs  agent_proof_cli.rs  block_evidence_verifier.rs  body_cap_streamed.rs  bounty_announce_route.rs  bounty_catalog_store.rs  bounty_containment_availability.rs  bounty_event_crash_heal.rs  bounty_event_ledger_recovery.rs  bounty_event_store.rs  bounty_event_store_durability.rs  bounty_lean_verifier.rs  bounty_proof_audit_persists_checker_artifact_hash.rs  bounty_proof_audit_persists_lean_source_and_verifier_hash.rs  bounty_proof_route.rs  bounty_proof_verify_does_not_block_ready.rs  bounty_route.rs  bounty_status_route.rs  concurrency.rs  concurrency_limit.rs  cross_network_rejection.rs  deep_verify_block_roundtrip.rs  family_manifest_store.rs  genesis_network_binding.rs  graceful_shutdown.rs  hard_guard_regression.rs  head_difficulty.rs  http_contract.rs  http_fault_matrix.rs  http_rate_limit_cli.rs  ingest_block_reverify.rs  insecure_verifier_boot_refusal.rs  live_ready_routes.rs  local_node.rs  metrics_counters.rs  metrics_route.rs  no_duplicate_proof_credit.rs  p2p_block_propagation.rs  (+56 more)
crates/boole-p2p/: Cargo.toml
crates/boole-p2p/src/: lib.rs
crates/boole-p2p/tests/: transport_loopback.rs
crates/boole-testkit/: Cargo.toml
crates/boole-testkit/src/: lib.rs
crates/boole-wallet-agent/: Cargo.toml
crates/boole-wallet-agent/src/: lib.rs  main.rs
crates/boole-wallet-agent/tests/: wallet_agent.rs
(+266 files in other folders)
