[workspace]
members = [
  "crates/boole-core",
  "crates/boole-cli",
  "crates/boole-node",
  "crates/boole-lean-runner",
  "crates/boole-miner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Boole contributors"]

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
hex = "0.4"
libc = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout"] }
