[package]
name = "boole-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# P0.7 — workspace-internal application crate. `publish = false` blocks an
# accidental `cargo publish` of in-flight code and tells cargo-deny that
# the path dependencies on sibling crates are not a wildcard violation.
publish = false

# P1.9 — `dev-tools` cascades to `boole-miner/dev-tools` so the
# `--mock-verify-accept` flag and the `AcceptingVerifier` bypass are
# present in the boole binary built for tests. Release builds with
# the default feature set never reach the bypass.
[features]
default = []
dev-tools = ["boole-miner/dev-tools"]

[dependencies]
anyhow.workspace = true
boole-core = { path = "../boole-core" }
boole-miner = { path = "../boole-miner" }
boole-node = { path = "../boole-node" }
clap.workspace = true
hex.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# P0.1b — shared test helpers (rand_suffix). Path-only, dev-only so the
# release graph never links boole-testkit.
boole-testkit = { path = "../boole-testkit" }

# P0.6b — inherit `[workspace.lints]` so the workspace-wide deny set
# (currently `unsafe_code = "deny"`) is enforced uniformly on this crate.
[lints]
workspace = true
