[package]
name = "boole-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
