[package]
name = "boole-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# P0.6 — opt into [workspace.lints]. boole-core has no unsafe blocks today,
# so the workspace-wide `unsafe_code = "deny"` applies as-is.
[lints]
workspace = true
