[package]
name = "boole-lean-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

# P0.6b — inherit the workspace deny set. `unsafe_code` is locally relaxed
# via a crate-root `#![allow(unsafe_code)]` attribute in src/lib.rs so the
# carve-out for libc rlimit/setpgid/killpg syscalls is documented in code
# rather than via a manifest exception.
[lints]
workspace = true
