[package]
name = "boole-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "boole-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
