[package]
name = "boole-miner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# P0.7 — workspace-internal application crate. `publish = false` blocks an
# accidental `cargo publish` of in-flight code and tells cargo-deny that
# the path dependencies on sibling crates are not a wildcard violation.
publish = false

# P1.9 — `dev-tools` gates the `--mock-verify-accept` flag and the
# `AcceptingVerifier` stub that lets smoke tests bypass real Lean
# verification. OFF by default so a release miner cannot forge shares
# by passing the flag; tests opt in via
# `cargo test --features boole-miner/dev-tools`.
[features]
default = []
dev-tools = []

[dependencies]
boole-core = { path = "../boole-core" }
boole-lean-runner = { path = "../boole-lean-runner" }
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
libc.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[[bin]]
name = "boole-miner"
path = "src/bin/boole-miner.rs"
