[package]
name = "boole-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
boole-core = { path = "../boole-core" }
boole-lean-runner = { path = "../boole-lean-runner" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
