[package]
name = "boole-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# P0.7 — workspace-internal application crate. `publish = false` blocks an
# accidental `cargo publish` of in-flight code and tells cargo-deny that
# the path dependencies on sibling crates are not a wildcard violation.
publish = false

# P1.8 — `dev-mock-payment` gates the magic test-payment string
# `boole-native-test:paid` accepted by the `/verify-answer` route.
# OFF by default so a release build (`--no-default-features`) does
# not even compile the constant into the binary; tests opt in via
# `cargo test --features boole-node/dev-mock-payment`.
[features]
default = []
dev-mock-payment = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
boole-core = { path = "../boole-core" }
boole-lean-runner = { path = "../boole-lean-runner" }
clap.workspace = true
hex.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# P0.1a — shared test helpers (rand_suffix / repo_root /
# lake_and_lean_available). dev-dependencies so the release build does not
# link the mock surface; production crates must never depend on it.
[dev-dependencies]
boole-testkit = { path = "../boole-testkit" }
