[package]
name = "boole-wallet-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# P0.7 — workspace-internal signing-isolation binary. `publish = false`
# blocks an accidental `cargo publish` of in-flight code and tells
# cargo-deny that the workspace path deps below (`boole-core`) are
# private and therefore exempt from the public-crate wildcard ban
# (`allow-wildcard-paths = true` in deny.toml only applies to crates
# that are not publishable to crates.io).
publish = false

[[bin]]
name = "boole-wallet-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
boole-core = { path = "../boole-core" }
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
libc.workspace = true
rand_core.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
